--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,35 @@
-*{
+* {
   margin: 0rem;
   padding: 0rem;
   box-sizing: border-box;
 }
-html{
-  font-size: 62.5%
+html {
+  font-size: 62.5%;
 }
 
 
-
+/* Drawer */
+.drawer{
+  background-color: #0c0a0a 
+}
 /* Navbar */
-.navbar{
+.navbar {
   width: 100%;
   height: 10vh;
   background-color: #0c0a0a !important;
   padding-block: 1rem;
 }
 
-
-
 /* Auth */
-/* Login Page & Register Page*/
-.login-page, .register-page{
+/* Login Page & Register Page & Reset Password Page*/
+.login-page,
+.register-page,
+.reset-password-page{
   width: 100%;
   height: 90vh;
   /* background-color: yellow; */
   /* border: 2px solid red; */
-  background: url('./assets/Img/loginBg.jpg');
+  background: url("./assets/Img/loginBg.jpg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -34,37 +37,69 @@ html{
   align-items: center;
   justify-content: center;
 }
-.left-login, .left-register{
+.left-login,
+.left-register,
+.left-reset-password {
   width: 50%;
   height: 100%;
 }
-.right-login, .right-register{
+.right-login,
+.right-register,
+.right-reset-password {
   width: 50%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.login-card{
+.login-card {
   width: 50%;
   height: 65%;
   background-color: rgba(255, 255, 255, 0.253) !important;
-  /* border-right: .2rem solid white; */
-  /* border-bottom: .2rem solid white; */
-  /* position: relative; */
-  /* right: 15%;
-  bottom: 3%; */
 }
 
 /* Register Card */
-.register-card{
+.register-card {
   width: 50%;
   height: 70%;
   background-color: rgba(255, 255, 255, 0.253) !important;
 }
-.link{
+.link {
   color: #2196f3;
 }
-.link:visited{
+.link:visited {
   color: #bbdefb;
+}
+
+
+/* Reset Password Page */
+.reset-password-card{
+  width: 50%;
+  height: 50%;
+  background-color: rgba(255, 255, 255, 0.253) !important;
+}
+
+
+/* Responsive For 768 PX */
+@media (max-width: 768px) {
+  html {
+    font-size: 45%;
+  }
+  .login-card {
+    width: 80%;
+  }
+}
+
+/* Responsive For 450 PX */
+@media (max-width: 450px) {
+  .left-login {
+    width: 0%;
+  }
+  .right-login {
+    width: 100%;
+  }
+  .login-card {
+    width: 70%;
+    height: 65%;
+  }
 }
