--- a/src/index.css
+++ b/src/index.css
@@ -553,7 +553,8 @@ html {
 .login-page,
 .register-page,
 .reset-password-page,
-.user-details-page {
+.user-details-page,
+.email-verification-page {
   width: 100%;
   height: 90vh;
   background: url("./assets/Img/loginBg.jpg");
@@ -567,14 +568,16 @@ html {
 .left-login,
 .left-register,
 .left-reset-password,
-.left-user-details {
+.left-user-details,
+.left-email-verification {
   width: 50%;
   height: 100%;
 }
 .right-login,
 .right-register,
 .right-reset-password,
-.right-user-details {
+.right-user-detail,
+.right-email-verification{
   width: 50%;
   height: 100%;
   display: flex;
@@ -607,6 +610,12 @@ html {
   background-color: rgba(255, 255, 255, 0.253) !important;
 }
 
+/* Verification Form */
+.verification-form{
+  width: 65%;
+  height: 60%;
+  background-color: rgba(255, 255, 255, 0.253) !important;
+}
 
 
 /* HomePage CSS */
